src/objects/SCOM_Application_Status__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <description>This will be a combination applicationname + &apos;-&apos; + monitor_type + &apos;-&apos; + monitor_name</description>
        <externalId>true</externalId>
        <label>External_Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Kbase_Article__c</fullName>
        <label>Kbase Article</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitor_Name__c</fullName>
        <label>Monitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Type__c</fullName>
        <label>Monitor Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>PASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARN</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Application Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>